# side-by-side-diff

./: .editorconfig  Cargo.toml  LICENSE  README.md  Taskfile.yml
.github/workflows/: release.yaml
src/: lib.rs
