[package]
name = "side-by-side-diff"
version = "0.1.2"
edition = "2021"
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
description = "Create side-by-side diff text."
license = "MIT"
homepage = "https://github.com/tadashi-aikawa/side-by-side-diff"
documentation = "https://docs.rs/side-by-side-diff"
repository = "https://github.com/tadashi-aikawa/side-by-side-diff"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
similar = "2.2.1"
unicode-width = "0.1.10"
